Fix: Added reset for background video when the parent has set `text-align: center;`

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -186,6 +186,7 @@
     max-width: none;
     position: absolute;
     top: 50%;
+    left: 0;
     -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
             transform: translateY(-50%); }
